redesigned profile page and fixed issues with flashed messages not showing up

--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -4,49 +4,6 @@
     box-sizing: border-box;
 }
 
- .section_top {
-    width: auto;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #fafafa;
-}
-
-.section_top form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.bform_buttons {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.section_bottom {
-    padding: 2%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.3);
-    background-color: white;
-}
-
-.card-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
-}
-
 .pfp {
     height: 150px;
     width: 150px;
@@ -57,4 +14,44 @@
     justify-content: center;
     font-size: 80px;
     border: 2px solid black;
+}
+
+.sidenav {
+    height: 100%;
+    background-image: linear-gradient(45deg, #ffffff, #ddf9ff);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 3%;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+
+.main {
+    padding: 3%;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+}
+
+@media screen and (max-width: 450px) {
+    .main{
+        margin-top: 10%;
+    }
+}
+
+@media screen and (min-width: 768px){
+    .main{
+        margin-left: 40%; 
+    }
+
+    .sidenav{
+        width: 40%;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+    }
 }
